# sinv

./: .gitignore  CMakeLists.txt
assets/: inv.xcf  player.xcf
src/: main.cpp
